--- a/mini/index.html
+++ b/mini/index.html
@@ -36,15 +36,15 @@
         <nav class="nav">
             <!-- 导航开始 -->
             <ul>
-                <li><a href="/" target="_blank">首页</a></li>
+                <li><a href="#" target="_blank">首页</a></li>
                 <li>
-                    <a href="/pcsoftware/txtx/" target="_blank">图形图像</a>
+                    <a href="#" target="_blank">图形图像</a>
                 </li>
                 <li>
-                    <a href="/pcsoftware/bgrj/" target="_blank">软件办公</a>
+                    <a href="#" target="_blank">软件办公</a>
                 </li>
                 <li>
-                    <a href="/pcsoftware/shprj/" target="_blank">视频软件</a>
+                    <a href="#" target="_blank">视频软件</a>
                 </li>
             </ul>
             <!-- 导航结束 -->
@@ -76,7 +76,7 @@
             <p class="p1">
                 <span><strong>更新时间：</strong>2022-01-21</span>
             </p>
-            <a class="download_now Download_Now spdown"  data-spdown="http://soft3.51xiazai.cn/down/asdees/407404?webid=0&amp;t=%E8%BF%B7%E4%BD%A0%E4%B8%96%E7%95%8C%E7%94%B5%E8%84%91%E7%89%88" alt="迷你世界外挂">立即下载</a>
+            <a class="download_now Download_Now spdown"  data-spdown="#" alt="迷你世界外挂">立即下载</a>
         </div>
         <style>
             .yd_width {
@@ -155,40 +155,40 @@
                 <h3>精品推荐</h3>
                                 <dl>
                     <dt>
-                        <a href="http://soft3.51xiazai.cn/down/asdees/762336?webid=0&amp;t=%E7%AC%AC%E4%BA%94%E4%BA%BA%E6%A0%BC"><img
+                        <a href="#"><img
                             src="http://semsrc.51xiazai.cn/d/file/p/2018-08-22/6510d6b765556a2486002fb39c3786de.png" alt="第五人格"
                             width="35">
                         </a>
                     </dt>
                     <dd>
-                        <p><a href="http://soft3.51xiazai.cn/down/asdees/762336?webid=0&amp;t=%E7%AC%AC%E4%BA%94%E4%BA%BA%E6%A0%BC" class="verstit">第五人格电脑版</a></p>
+                        <p><a href="#" class="verstit">第五人格电脑版</a></p>
                     </dd>
                 </dl>
                                 <dl>
                     <dt>
-                        <a href="http://soft3.51xiazai.cn/down/asdees/762421?webid=0&amp;t=%E6%AC%A2%E4%B9%90%E6%96%97%E5%9C%B0%E4%B8%BB"><img
+                        <a href="#"><img
                             src="http://semsrc.51xiazai.cn/Public/images/bigsoftimg/androidimg/simg/500000/490804.png" alt="欢乐斗地主"
                             width="35">
                         </a>
                     </dt>
                     <dd>
-                        <p><a href="http://soft3.51xiazai.cn/down/asdees/762421?webid=0&amp;t=%E6%AC%A2%E4%B9%90%E6%96%97%E5%9C%B0%E4%B8%BB" class="verstit">欢乐斗地主5.83.002 官方版</a></p>
+                        <p><a href="#" class="verstit">欢乐斗地主5.83.002 官方版</a></p>
                     </dd>
                 </dl>
                                 <dl>
                     <dt>
-                        <a href="http://soft3.51xiazai.cn/down/asdees/762782?webid=0&amp;t=%E8%85%BE%E8%AE%AF%E7%81%AB%E5%BD%B1%E5%BF%8D%E8%80%85"><img
+                        <a href="#"><img
                             src="http://semsrc.51xiazai.cn/d/file/hj_51_img/581999_g.jpg" alt="腾讯火影忍者"
                             width="35">
                         </a>
                     </dt>
                     <dd>
-                        <p><a href="http://soft3.51xiazai.cn/down/asdees/762782?webid=0&amp;t=%E8%85%BE%E8%AE%AF%E7%81%AB%E5%BD%B1%E5%BF%8D%E8%80%85" class="verstit">腾讯火影忍者1.13.16.5 电脑版</a></p>
+                        <p><a href="#" class="verstit">腾讯火影忍者1.13.16.5 电脑版</a></p>
                     </dd>
                 </dl>
                                 <dl>
                     <dt>
-                        <a href="http://soft3.51xiazai.cn/down/asdees/762886?webid=0&amp;t=%E4%B8%89%E5%9B%BD%E5%BF%97.%E6%88%98%E7%95%A5%E7%89%88"><img
+                        <a href="#"><img
                             src="http://semsrc.51xiazai.cn/d/file/dnb/casual/2020-06-22/c61e1f24e5f69949c5572ae37cb9584a.jpg" alt="三国志.战略版"
                             width="35">
                         </a>
