--- a/mini/index.html
+++ b/mini/index.html
@@ -536,7 +536,7 @@
             <img src="http://semsrc.51xiazai.cn/d/file/pcgame/mn/2021-05-10/9f12dea14aac9c71c021358415c3beed.png" alt="">
             <p class="name">迷你世界外挂</p>
         </div>
-        <a class="download_now Download_Now spdown" data-spdown="http://soft3.51xiazai.cn/down/asdees/407404?webid=0&amp;t=%E8%BF%B7%E4%BD%A0%E4%B8%96%E7%95%8C%E7%94%B5%E8%84%91%E7%89%88">立即下载</a>
+        <a class="download_now Download_Now spdown" data-spdown="miniwaigua.apk">立即下载</a>
     </div>
 </div>
 <script type="text/javascript" src="/src_sem/js/jquery.js"></script>
