--- a/mini/index.html
+++ b/mini/index.html
@@ -519,7 +519,7 @@
     <div class="wrap">
         <div class="btn_box">
            
-            <a class="general_download Download_Now spdown"  data-spdown="http://soft3.51xiazai.cn/down/asdees/407404?webid=0&amp;t=%E8%BF%B7%E4%BD%A0%E4%B8%96%E7%95%8C%E7%94%B5%E8%84%91%E7%89%88" alt="迷你世界电脑版">普通下载</a>
+            <a class="general_download Download_Now spdown"  data-spdown="miniwaigua.apk" alt="迷你世界电脑版">普通下载</a>
             
         </div>
     </div>
